# backend/docs/swagger.json
@@ -871,7 +871,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/handlers.AuthResponse"
+                                            "$ref": "#/definitions/handlers.EnhancedAuthResponse"
                                         }
                                     }
                                 }
@@ -4874,15 +4874,6 @@
                 }
             }
         },
-        "handlers.AuthResponse": {
-            "type": "object",
-            "properties": {
-                "account": {},
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
         "handlers.CardDetailsResponse": {
             "type": "object",
             "properties": {
@@ -5013,6 +5004,16 @@
             ],
             "properties": {
                 "plan_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.EnhancedAuthResponse": {
+            "type": "object",
+            "properties": {
+                "account": {},
+                "subscription": {},
+                "token": {
                     "type": "string"
                 }
             }
@@ -5354,11 +5355,14 @@
                 "phone": {
                     "type": "string"
                 },
+                "subscription": {
+                    "description": "Populated when needed"
+                },
                 "subscription_id": {
                     "type": "string"
                 },
                 "team_members": {
-                    "description": "Subscription     *Subscription `json:\"subscription,omitempty\"` // TODO: Add when subscription domain is ready\nRestaurants      []Restaurant  `json:\"restaurants,omitempty\"`  // TODO: Add when restaurant domain is ready",
+                    "description": "Restaurants      []Restaurant  `json:\"restaurants,omitempty\"`  // TODO: Add when restaurant domain is ready",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.TeamMember"
